general styles have been added

--- a/css_grid/excercise01_holy_grail/style.css
+++ b/css_grid/excercise01_holy_grail/style.css
@@ -1,5 +1,20 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
+html, body{
+    height: 100svh;
+}
+
+.container{
+    height: inherit;
+    margin: 1rem;
+    border: 2px solid black;  /*remove this later */
+    background-color: lightblue;
+}
+
+.container > div {
+    border: 2px solid red; /*remove this later */
+}
