display grid has been set

--- a/css_grid/excercise01_holy_grail/style.css
+++ b/css_grid/excercise01_holy_grail/style.css
@@ -13,6 +13,7 @@ html, body{
     margin: 1rem;
     border: 2px solid black;  /*remove this later */
     background-color: lightblue;
+    display: grid;
 }
 
 .container > div {
