--- a/css_grid/excercise01_holy_grail/style.css
+++ b/css_grid/excercise01_holy_grail/style.css
@@ -18,6 +18,8 @@ html, body{
 }
 
 .container{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
     height: inherit;
     margin: 2rem;
     color: var(--clr);
