--- a/css_grid/excercise02_holy_grail_responsive/style.css
+++ b/css_grid/excercise02_holy_grail_responsive/style.css
@@ -7,30 +7,33 @@
     --clr: white;
 }
 
-html, body{
-    height: 100svh;
-}
-
 .container{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.4rem;
     height: inherit;
-    border: 2px solid orangered;
-    display: grid;
     color: var(--clr);
+    font-weight: bold;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 1fr 5fr 1fr;
+    gap: 15px;
+
 }
 
 .container > div {
-    border: 2px solid orangered;
     text-align: center;
+    border-radius: 10px;
 }
 
 .header{
     background-color: var(--header-clr);
+    grid-area: 1 / 1 / 2 / -1;
 }
 
 .sidebar{
     background-color: var(--sidebar-clr);
+    grid-area: 2/ 1 / 4 / 2;
+
 }
 
 .nav{
@@ -39,8 +42,15 @@ html, body{
 
 .article{
     background-color: var(--article-clr);
+    grid-area: 3 / 2 / 4 / -1  ;
 }
 
 .footer{
     background-color: var(--footer-clr);
+    grid-area: 4 / 1 / 5 / -1;
+}
+
+.article > p {
+    margin: 1.2em;
+    text-align: start;
 }
