various id's has been to tags

--- a/css_grid/excercise03_holy_grail_mockup/style.css
+++ b/css_grid/excercise03_holy_grail_mockup/style.css
@@ -5,3 +5,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* Basic/Initial Styling */
+
+:root{
+    --header-clr:grey;
+    --primary-bg-clr: white;
+    --secondary-bg-clr: red;
+    --primary-txt-clr: black;
+}
+
+
